Slightly improve the test target of this makefile
Signed-off-by: Toon Schoenmakers <nighteyes1993@gmail.com>

--- a/debug/Makefile
+++ b/debug/Makefile
@@ -8,14 +8,15 @@ TESTBIN:= test.bin
 all: $(DEPS)
 
 test: $(DEPS)
-	$(CC) $(CFLAGS) -I. -o test.bin test/test.c debug.o
-	./test.bin
+	$(CC) $(CFLAGS) -I. -o $(TESTBIN) test/test.c debug.o
+	./$(TESTBIN)
 
 debug.o: debug.c debug.h
 	$(CC) $(CFLAGS) -c -o debug.o debug.c
 
 clean:
 	rm -rfv *.o
+	$(TESTBIN)
 
 clang:
 	$(MAKE) CC=clang
