--- a/singly-linked-list/Makefile
+++ b/singly-linked-list/Makefile
@@ -1,6 +1,6 @@
 CFLAGS := $(CFLAGS) -Wall -O2 -mtune=native -g
 CC     := gcc
-DEPS   := debug.o
+DEPS   := linked-list.o
 TESTBIN:= test.bin
 
 .PHONY: all clean test
@@ -8,11 +8,11 @@ TESTBIN:= test.bin
 all: $(DEPS)
 
 test: $(DEPS)
-	$(CC) $(CFLAGS) -I. -o $(TESTBIN) test/test.c debug.o
+	$(CC) $(CFLAGS) -I. -o $(TESTBIN) test/test.c linked-list.o
 	./$(TESTBIN)
 
-debug.o: debug.c debug.h
-	$(CC) $(CFLAGS) -c -o debug.o debug.c
+linked-list.o: linked-list.c linked-list.h
+	$(CC) $(CFLAGS) -c -o linked-list.o linked-list.c
 
 clean:
 	rm -rfv *.o
