Slightly improved the test targets in the Makefiles
Signed-off-by: Toon Schoenmakers <nighteyes1993@gmail.com>

--- a/debug/Makefile
+++ b/debug/Makefile
@@ -7,8 +7,10 @@ TESTBIN:= test.bin
 
 all: $(DEPS)
 
-test: $(DEPS)
+$(TESTBIN): $(DEPS)
 	$(CC) $(CFLAGS) -I. -o $(TESTBIN) test/test.c debug.o
+
+test: $(TESTBIN)
 	./$(TESTBIN)
 
 debug.o: debug.c debug.h
