Made these Makefile a bit more future proof Signed-off-by: Toon Schoenmakers <nighteyes1993@gmail.com>

--- a/singly-linked-list/Makefile
+++ b/singly-linked-list/Makefile
@@ -8,7 +8,7 @@ TESTBIN:= test.bin
 all: $(DEPS)
 
 $(TESTBIN): $(DEPS)
-	$(CC) $(CFLAGS) -I. -o $(TESTBIN) test/test.c linked-list.o
+	$(CC) $(CFLAGS) -I. -o $(TESTBIN) test/test.c $(DEPS)
 
 test: $(TESTBIN)
 	./$(TESTBIN)
