--- a/debug/Makefile
+++ b/debug/Makefile
@@ -8,7 +8,7 @@ TESTBIN:= test.bin
 all: $(DEPS)
 
 $(TESTBIN): $(DEPS)
-	$(CC) $(CFLAGS) -I. -o $(TESTBIN) test/test.c debug.o
+	$(CC) $(CFLAGS) -I. -o $(TESTBIN) test/test.c $(DEPS)
 
 test: $(TESTBIN)
 	./$(TESTBIN)
