This should reallly fix the time command not working on travis..
Turns out time is a shell keyword and a command, the command is not
installed on Ubuntu by default, therefor I'm installing it first.
You can also simply run the tests without time by launching them using
$ make test TIME=
I sort of demand the real time as it gives more useful information.

Also I'm on a train..

Signed-off-by: Toon Schoenmakers <nighteyes1993@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: c
 compiler:
   - gcc
   - clang
+before_install:
+  - sudo apt-get update -qq >/dev/null 2>&1
+  - sudo apt-get install time -qq >/dev/null 2>&1
 script:
   - make clean
   - make CC=$CC
