--- a/debug/Makefile
+++ b/debug/Makefile
@@ -2,6 +2,7 @@ CFLAGS := $(CFLAGS) -Wall -O2 -mtune=native -g
 CC     := gcc
 DEPS   := debug.o
 TESTBIN:= test.bin
+TIME   := /usr/bin/time
 
 .PHONY: all clean test
 
@@ -11,7 +12,7 @@ $(TESTBIN): $(DEPS)
 	$(CC) $(CFLAGS) -I. -o $(TESTBIN) test/test.c $(DEPS)
 
 test: $(TESTBIN)
-	/usr/bin/time ./$(TESTBIN)
+	$(TIME) ./$(TESTBIN)
 
 debug.o: debug.c debug.h
 	$(CC) $(CFLAGS) -c -o debug.o debug.c
